--- a/yes.html
+++ b/yes.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/question.css">
 </head>
 <body>
     <div id="main">
         <div id="box">
-            <p id="title">Hello my love!</p>
-            <img id="smallImage" src="images/us.jpeg" alt="image of us">
-            <a href="question.html">
-                <button id="initialButton" >Click here </button>
-            </a>
+            <p id="title">YAYAYAYAYAYAYYAYAY</p>
+            <img id="smallImage" src="images/happy.jpeg" alt="image of us">
+            <p id="yay">i love you my bria</p>
         </div>
     </div>
 </body>
